Prometheus/VPC-team4/VPC.tf
resource "aws_vpc" "main" {
  cidr_block = "${var.vpc_cidr}"
    tags = "${var.tags}"
}
