Prometheus/VPC-team4/internet_gateway.tf
resource "aws_internet_gateway" "gw" {
  vpc_id = "${aws_vpc.main.id}"
  tags = "${var.tags}"
}
